# cds-healpix-rust

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENCE-MIT  README.md  makeDoc.bash
.github/workflows/: deploy_cli.yml  release_cli.yml  rust.yml  test_cli.yml  test_lib.yml  test_wasm.yml
benches/: nested_hash.rs  zordercurve.rs
cli/: Cargo.toml
cli/src/: bin.rs
crates/cli/: CHANGELOG.md  COPYING  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
crates/cli/doc/: hpx.1.txt.tpl
crates/cli/resource/: cli_test.bash  count.d2.m.png.expect  hipmain.csv  test_cov_fits.expect  test_cov_polygon.expect  test_cov_ring.expect  test_cov_zone.expect  test_nested_center_list_csv.expect  test_nested_neigh_value.expect  test_nested_table.expect  test_nested_tozuniq_multidepth_csv.expect  test_nested_vertices_list.expect  test_proj_csv_head.expect  test_proj_value.expect  test_unproj_list.expect  test_unproj_value.expect
crates/cli/src/: coverage.rs  hcidx.rs  lib.rs  main.rs  map.rs  mom.rs  nested.rs  qhcidx.rs  sort.rs  view.rs
crates/cli/src/input/: coo.rs  csv.rs  depthash.rs  hash.rs  mod.rs  pos.rs
crates/cli/test/: count.d2.l.explicit.png.expect  count.d2.l.png.expect  count.d2.m.png.expect  count.d2.r.explicit.png.expect  count.d2.r.png.expect  hip.d5.dens.mom.png.expect  hip.d5.dens.png.expect  test.bash  test_cov_box.expect  test_cov_cone.expect  test_cov_ellipse.expect  test_cov_stcs.expect  test_nested_bestdepth.expect  test_nested_bilinear_value.expect  test_nested_bilinera_csv.expect  test_nested_bilinera_list.expect  test_nested_hash_csv.expect  test_nested_hash_list.expect  test_nested_hash_value.expect  test_nested_neigh_list.expect  test_nested_tozuniq_singledepth_csv.expect  test_nested_vertices_csv.expect  test_nested_vertices_value.expect  test_proj_csv_head_paste.expect  test_proj_csv_paste.expect  test_proj_list.expect  test_unproj_csv_head_paste.expect
crates/libpsql/: Cargo.toml
crates/libpsql/expected/: simpletests.out
crates/libpsql/sql/: simpletests.sql
crates/libpsql/src/: cdshealpix.c
crates/psql/: README.md
crates/wasm/: CHANGELOG.mod  Cargo.toml  demo.html
crates/wasm/src/: lib.rs
libpsql/: Cargo.toml  Makefile  README.md  pg_cds_healpix--0.0.1.sql  pg_cds_healpix.control
libpsql/expected/: simpletests.out
libpsql/sql/: simpletests.sql
libpsql/src/: cdshealpix.c  cdshealpix.h  lib.rs
libpython/: Cargo.toml  zw.py
libpython/cdshealpix-python/: README.md  cone_search.py
libpython/python/: healpix.py
libpython/src/: lib.rs
libwasmbindgen/: Cargo.toml  README.md  test.html
libwasmbindgen/src/: lib.rs
src/: bin.rs  compass_point.rs  external_edge.rs  lib.rs  special_points_finder.rs
src/nested/: bmoc.rs  gpu.rs  mod.rs  zordercurve.rs
src/nested/iter/: checksorted.rs  mod.rs  sortedcoo2sortedhash.rs  sortedhash2hashcount.rs
src/nested/map/: img.rs  mod.rs  mom.rs  skymap.rs
src/nested/map/astrometry/: gal.rs  math.rs  mod.rs
src/nested/map/fits/: error.rs  gz.rs  keywords.rs  mod.rs  read.rs  write.rs
src/nested/map/mom/: mod.rs
src/nested/map/mom/impls/: bslice.rs  mod.rs  zvec.rs
src/nested/map/mom/impls/ported_from_mom_builder/: build_tree.rs  error.rs  mod.rs  norder_leaves.rs  tree.rs  tree_config.rs
src/nested/map/mom/impls/ported_from_mom_builder/state/: merge_is_valid.rs  merge_states.rs  min_max_mean.rs
src/nested/map/mom/impls/ported_from_mom_builder/state/value/: exctly_equal_merger.rs  mod.rs  sum_until.rs  value_state.rs
src/nested/map/skymap/: explicit.rs  implicit.rs  mod.rs
src/nested/moc/: compressed.rs  mod.rs  op.rs
src/nested/mom/: build_tree.rs  exclusive_option.rs  norder_leaves.rs  tree.rs
src/nested/mom/state/: min_max_mean.rs  mod.rs
src/nested/mom/state/value/: exctly_equal_merger.rs  sum_until.rs
src/nested/sort/: cindex.rs  feature_gate.rs  mod.rs  scindex.rs
src/ring/: mod.rs
src/sph_geom/: cone.rs  coo3d.rs  elliptical_cone.rs  frame.rs  mod.rs  proj.rs  zone.rs
src/xy_geom/: ellipse.rs  mod.rs
test/: Cargo.toml  README.md
test/resources/: .sdss_not.moc.json.swp  glimpse_not.moc.json
test/resources/moc/: glimpse.moc.json  sdss_and_glimpse.moc.json
test/resources/skymap/: gaiadr3.nside64.densmap.fits  skymap.fits  skymap.gaiadr3.depth6.fits
test/src/: lib.rs  main.rs
