[package]
name = "cdshealpix"
version = "0.6.10"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["algorithms", "science"] 
repository = "https://github.com/cds-astro/cds-healpix-rust/"
description = """
Rust implementation of the HEALPix tesselation.
"""
exclude = [
    "makeDoc.bash",
    "resources/4doc",
]

# Use:
# > cargo rustdoc --open -- --html-in-header katex.html
# to look at the doc locally
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]

[lib]
name = "cdshealpix"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[dependencies]
katex-doc = "0.1.0"
log = "0.4"
base64 = "0.21"   # Added for Compressed MOC
num = "0.4"       # Added for MOC
num-traits = "0.2"  # Added for MOC
# Skymaps
byteorder = "1.4.3"
thiserror = "1.0"
colorous = "1.0"
mapproj = "0.3"
png = "0.17"
flate2 = "1.0" # Compression/decompression
itertools = "0.13" # Added for MOM
serde = { version = "1.0", features = ["derive"] } # MOM serialization/deserialization

[dev-dependencies]
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "nested_hash"
harness = false

[[bench]]
name = "zordercurve"
harness = false

[features]

