[package]
name = "cdshealpix-cli"
version = "0.1.1"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["algorithms", "science"] 
repository = "https://github.com/cds-astro/cds-healpix-rust/"
description = """
Command line interface for cdshealpix.
"""

[[bin]]
name = "hpx"
path = "src/bin.rs"

[build-dependencies]
cdshealpix = { version = "0.1.2", path = ".." }

[dependencies]
cdshealpix = { version = "0.1.2", path = ".." }
# External dependencies
structopt = "0.2"        # CLI lib (based on clap)

[features]
nightly = []

[profile.release]
lto = true
debug = false


