[package]
name = "cdshealpix_libpgsql"
version = "0.1.0"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]

[build-dependencies]
cdshealpix = { version = "0.5.5", path = "../" }

[dependencies]
libc = "*"
cdshealpix = { version = "0.5.5", path = "../" }


[lib]
name = "cdshealpix_libpsql"
path = "src/lib.rs"
crate-type = ["staticlib"]

