[package]
name = "cdshealpix_ffi"
version = "0.1.0"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2018"

[build-dependencies]
cdshealpix = { version = "0.1.0", path = ".." }

[dependencies]
cdshealpix = { version = "0.1.0", path = ".." }

[lib]
name = "cdshealpix_ffi"
path = "src/lib.rs"
crate-type = ["dylib"]

[profile.release]
lto = true
#panic = 'abort'

