[package]
name = "cdshealpix-test"
version = "0.1.0"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["algorithms", "science"] 
repository = "https://github.com/cds-astro/cds-healpix-rust/"
description = """
Additional tests for cdshealpix.
"""

[build-dependencies]
cdshealpix = { version = "0.1.2", path = ".." }

[dependencies]
cdshealpix = { version = "0.1.2", path = ".." }
serde = "1.0.85"
serde_derive = "1.0.85"  # Serialization/Deserialisation lib macros
serde_json = "1.0.37"

[features]
nightly = []

