[package]
name = "cdshealpix-wasm"
version = "0.9.1"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
description = """
WASM version of the CDS HEALPix library.
"""
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["science", "data-structures", "algorithms"]
keywords = ["healpix"]
documentation = "https://github.com/cds-astro/cds-healpix-rust/tree/main/crates/wasm"
homepage = "https://github.com/cds-astro/cds-healpix-rust/tree/main/crates/wasm"
repository = "https://github.com/cds-astro/cds-healpix-rust/tree/main/crates/wasm"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cdshealpix = { path = "../.." }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"


[profile.release]
panic = 'unwind'
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 3
lto = true


[package.metadata.wasm-pack.profile.release]
wasm-opt = true

